# IoT_Platform

./: .gitignore  LICENSE  README.md  run_n_clients.sh
backend/: Cargo.toml  README.md  build.rs  clippy.toml  example_config.toml
backend/proto/: RegistrationService.proto
backend/proto/frontend/: frontendDeviceControlService.proto  frontend_types.proto  registrationService.proto
backend/proto/iot/: deviceControlService.proto  registrationService.proto  requestUpdateService.proto  types.proto
backend/proto/iot/registration/: RegistrationService.proto
backend/proto/iot/types/: Types.proto
backend/src/client/: client.rs  client_config.rs  client_connection.rs  client_polling.rs  client_registration.rs  iot_client.rs
backend/src/frontend/: frontend.rs  frontend_device_control.rs  frontend_registration.rs  frontend_types.rs
backend/src/server/: certificate_signing.rs  device.rs  device_control_service.rs  frontend_clients.rs  polling.rs  registration.rs  server.rs  types.rs
backend/src/server/web_json_translation/: json_device_control.rs  json_frontend_types.rs  json_get_devices.rs  json_registration.rs  json_translation.rs  mod.rs
client_library/: Cargo.toml  README.md  build.rs  cp_proto_here.sh  publish.sh
client_library/src/: client.rs  client_config.rs  client_connection.rs  client_polling.rs  client_registration.rs  client_types.rs  lib.rs
proto/: buf.yaml
proto/frontend/: deviceControlService.proto  frontendDeviceControlService.proto  frontendTypes.proto  frontend_types.proto  registrationService.proto
proto/iot/: deviceControlService.proto  registrationService.proto  requestUpdateService.proto  types.proto
testing/: calculate_avg_from_data.py  run_avg_on_testdata.sh  test_results
testing/ddos_noshp_server/: Cargo.toml  build.rs
testing/ddos_noshp_server/src/: frontend_types.rs  main.rs
testing/spawn_noshp_clients/: Cargo.toml  example_config.toml
testing/spawn_noshp_clients/src/: main.rs
testing/test_data/: test_1_client_1  test_1_client_10  test_1_client_100  test_1_client_500  test_1_client_700  test_2_client_1  test_2_client_10  test_2_client_100  test_2_client_500  test_2_client_700  test_3_client_1  test_3_client_10  test_3_client_100  test_3_client_500  test_3_client_700  test_with_stuff_open
vue_frontend/: README.md  buf.yaml  build_proto.sh  package-lock.json  package.json  serve_frontend.sh  vite.config.ts
vue_frontend/src/: App.vue  api_call_links.ts  grpc_clients.ts  main.ts  types.ts
vue_frontend/src/assets/: main.css
vue_frontend/src/backend_calls/: deviceControl.ts  getConnectedDevices.ts  registration.ts
vue_frontend/src/components/: GenericIotDevice.vue
vue_frontend/src/components/base/: NavBar.vue
vue_frontend/src/components/device_controls/: BasicLampControl.vue  basic_lamp.vue
vue_frontend/src/stores/: deviceIdStore.ts
vue_frontend/src/views/: HomeView.vue
