[package]
name = "iot-hub-backend"
version = "0.1.0"
authors=["nik"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
    name = "server"
    path = "src/server.rs"

[[bin]] 
    name = "client"
    path = "src/client.rs"
