[package]
name = "NOSHP-Client"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "The Client library for Nik's Open-source Smart Home Platform"
repository = "https://github.com/niknik3610/IoT_Platform/tree/main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.75"
fxhash = "0.2.1"
rsa = { version = "0.9.3", features = ["serde", "sha2", "pem"] } 
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
rand = "0.8.5"

#if I precompile the protobuf files these are no longer needed
prost = "0.12"
prost-types = "0.12.1"
prost-build = "0.12.3"

[build-dependencies]
tonic-build = "0.10"

