[package]
name = "spawn_noshp_clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
NOSHP-Client = { path = "../../client_library" }
clap = { version = "4.5.2", features = ["derive"] }
tokio = "1.36.0"
